force-app/main/default/objects/Acount__c.object
<CustomObject>
    <fields>
        <fullName>Display_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Experience1__c</fullName>
        <label>Experience1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Account Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Country__c</fullName>
        <defaultValue>&apos;India&apos;</defaultValue>
        <label>Preferred Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salary_Expected__c</fullName>
        <label>Salary Expected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Technology_Known__c</fullName>
        <defaultValue>&apos;Salesforce&apos;</defaultValue>
        <label>Technology Known</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>JAVA</fullName>
                </value>
                <value>
                    <fullName>C, C#</fullName>
                </value>
                <value>
                    <fullName>ABAP</fullName>
                </value>
                <value>
                    <fullName>SAS</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>DotNet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Acount</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Experience__c</columns>
        <columns>Preferred_Country__c</columns>
        <columns>Salary_Expected__c</columns>
        <columns>Technology_Known__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>